# fastapi_mysql_simple

./: Dockerfile  Readme.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 44a35257f5f4_initial_migration.py
app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: conftest.py  test_main.py
