[tool.poetry]
name = "fastapi-mysql"
version = "0.1.0"
description = ""
authors = ["Thomas Andersen <eldo0523@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
mysql-connector-python = "^9.0.0"
pydantic = "^2.8.2"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
email-validator = "^2.2.0"
pytest = "^8.3.2"
playwright = "^1.46.0"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
